--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             </a>
         </h1>
         <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-          大家好 我的博客开通了 希望我能写出好文章给大家看
+          大家好 我的博客开通了 希望我能写出好文章给大家看 我的博客开通了 希望我能写出好文章给大家看 我的博客开通了 希望我能写出好文章给大家看 我的博客开通了 希望我能写出好文章给大家看 我的博客开通了 希望我能写出好文章给大家看
         </div>
           <a href="http://example.org/posts/%E7%AC%AC%E4%BA%8C%E7%AF%87%E5%8D%9A%E5%AE%A2/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
         
